<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        android:title="@string/info_secret_setting">

        <SwitchPreference
            android:defaultValue="true"
            android:key="secret_switch"
            android:title="@string/pref_title_social_recommendations"
            android:summary="@string/pref_title_social"
            />
        <Preference
            android:key="complete_info"
            android:title="@string/pref_title_info"
            />
        <CheckBoxPreference
            android:key="night_mode"
            android:title="夜间模式"
            android:summary="应用夜间模式到整个应用"
            />
    </PreferenceCategory>
    <PreferenceCategory
        android:title="@string/info_network_setting">

        <SwitchPreference
            android:defaultValue="false"
            android:key="@string/setting_key_mobile_network_play"
            android:title="@string/pref_title_wifi"
            android:summary="@string/pref_title_wifi_summary"/>

    </PreferenceCategory>
    <PreferenceCategory
        android:title="@string/pref_header_data_sync">

        <Preference android:title="@string/pref_title_clear"
            android:key="key_cache"
            >
        </Preference>
        <Preference android:title="@string/pref_title_about"
            android:key="key_about"
            >
        </Preference>

    </PreferenceCategory>




</PreferenceScreen>
