<preference-headers xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- These settings headers are only used on tablets. -->

    <header
        android:fragment="com.cyl.music_hnust.SettingsActivity$GeneralPreferenceFragment"
        android:title="@string/info_secret_setting"
        android:summary="@string/info_secret_setting_detail"
        />

    <header
        android:fragment="com.cyl.music_hnust.SettingsActivity$NotificationPreferenceFragment"
        android:icon="@android:drawable/ic_menu_info_details"
        android:title="@string/info_secret_setting" />

    <header
        android:fragment="com.cyl.music_hnust.SettingsActivity$DataSyncPreferenceFragment"
        android:icon="@drawable/ic_sync_black_24dp"
        android:title="@string/pref_header_data_sync" />
    <header
        android:icon="@drawable/ic_action_love_select"
        android:summary="@string/action_search"
        android:title="@string/action_settings"
        android:fragment="com.cyl.music_hnust.SettingsActivity$NotificationPreferenceFragment"/>


</preference-headers>
