<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="@dimen/dp_56"
    android:background="?android:attr/selectableItemBackground"
    android:gravity="center_vertical"
    android:orientation="horizontal">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/iv_cover"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:layout_gravity="center"
        android:layout_margin="@dimen/dp_8"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:src="@drawable/default_cover"
        android:transitionName="@string/transition_cover"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/tv_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:ellipsize="end"
        android:lines="1"
        android:text="@string/song"
        android:textSize="@dimen/text_size_common"
        app:layout_constraintBottom_toTopOf="@+id/tv_artist"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/iv_cover"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/tv_artist"
        android:layout_width="0dp"
        android:layout_height="@dimen/dp_16"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="16dp"
        android:drawablePadding="@dimen/dp_2"
        android:ellipsize="end"
        android:gravity="center|start"
        android:lines="1"
        android:text="@string/artist_tips"
        android:textColor="@color/grey"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/tv_title"
        app:layout_constraintStart_toStartOf="@+id/tv_title"
        app:layout_constraintTop_toBottomOf="@+id/tv_title" />


</androidx.constraintlayout.widget.ConstraintLayout>