<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/containerView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/closeIv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/bottomView"
        android:layout_alignParentEnd="true"
        android:layout_margin="@dimen/dp_16"
        android:background="?android:attr/selectableItemBackgroundBorderless"
        android:contentDescription="@string/close"
        android:src="@drawable/ic_clear" />

    <ProgressBar
        android:id="@+id/loadingView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="gone" />

    <LinearLayout
        android:id="@+id/bottomView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/white"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/controlsView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dp_8"
            android:gravity="center"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/searchLyricView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dp_8"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_8"
                    android:src="@drawable/ic_search_lyric"
                    android:tint="?colorPrimary" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/dp_8"
                    android:text="@string/search_lyric"
                    android:textColor="@color/black"
                    android:textSize="@dimen/sp_12" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/lyricFormatView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dp_8"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_8"
                    android:src="@drawable/ic_format_size"
                    android:tint="?colorPrimary" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/dp_8"
                    android:text="@string/lyric_format"
                    android:textColor="@color/black"
                    android:textSize="@dimen/sp_12" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/formatView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/formatSizeTv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/dp_16"
                    android:text="@string/lyric_format_size"
                    android:textColor="@color/black" />

                <SeekBar
                    android:id="@+id/formatSizeSb"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:max="100"
                    android:progress="0" />
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/formatColorTv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/dp_16"
                    android:text="@string/lyric_format_color"
                    android:textColor="@color/black" />

                <com.rtugeek.android.colorseekbar.ColorSeekBar
                    android:id="@+id/formatColorSb"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/dp_8"
                    android:layout_marginTop="@dimen/dp_8"
                    app:colorSeeds="@array/material_colors" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/lyricResultView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="@dimen/dp_16"
                android:text="@string/lyric_search_result"
                android:textColor="@color/black" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/lyricRecyclerView"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_200" />
        </LinearLayout>

    </LinearLayout>
</RelativeLayout>